# CPlusPlusLearning

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
CQA/: Addiply.cpp  HelloWorld.cpp  NotSoSelfDriving.cpp
source/: Calc.cpp  Camera.cpp  Camera.h  FirstProgram.cpp  IndexBuffer.cpp  IndexBuffer.h  Log.cpp  OpenGLApp.cpp  Query.cpp  QueryAndPrint.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h  glad.c
source/include/glad/: glad.h
source/resources/shaders/: Basic.shader
